// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTest render the component as a "textarea" element when the "isTextArea" prop is passed 1`] = `
Object {
  "component": <div>
    <textarea
      className="htz-a htz-b htz-c"
    />
  </div>,
  "styles": ".htz-a{border-color:green}.htz-b{height:10rem}.htz-c{resize:none}",
}
`;

exports[`InputTest render the component as a input element with a custom yellow border color when isError is false 1`] = `
Object {
  "component": <div>
    <input
      className="htz-a htz-b htz-c"
    />
  </div>,
  "styles": ".htz-a{border-color:yellow}.htz-b{height:3rem}.htz-c{resize:none}",
}
`;

exports[`InputTest should correctly render a input component with default style 1`] = `
Object {
  "component": <div>
    <input
      className="htz-a htz-b htz-c"
    />
  </div>,
  "styles": ".htz-a{border-color:green}.htz-b{height:3rem}.htz-c{resize:none}",
}
`;

exports[`InputTest should correctly render a input component with error state style 1`] = `
Object {
  "component": <div>
    <input
      className="htz-a htz-b htz-c"
    />
  </div>,
  "styles": ".htz-a{border-color:red}.htz-b{height:3rem}.htz-c{resize:none}",
}
`;

exports[`correctly render element and style based on styleObj prop 1`] = `
Object {
  "component": <div>
    <input
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g"
    />
  </div>,
  "styles": ".htz-a{border-color:green}.htz-b{height:7em}.htz-c{resize:none}.htz-d{width:70%}.htz-e{border-width:5px}.htz-f{color:purple}.htz-g{border-style:dashed}",
}
`;

exports[`render the component as a input element with a custom purple border color when isError 1`] = `
Object {
  "component": <div>
    <input
      className="htz-a htz-b htz-c"
    />
  </div>,
  "styles": ".htz-a{border-color:purple}.htz-b{height:3rem}.htz-c{resize:none}",
}
`;
